--- a/css/page.css
+++ b/css/page.css
@@ -4,9 +4,12 @@
   font-size: 1.3em;
   font-weight: 700;
   display: inline-block;
-  margin-top: 110px;
+  margin-top: 128px;
   text-transform: uppercase;
   line-height: 2em;
+}
+.menu p {
+  font-size: 2em;
 }
 .menu li {
   margin-bottom: 1em;
@@ -40,10 +43,13 @@
   padding-bottom: 1em;
 }
 .content .page-content ol {
-  font-size: 0.9em;
+  font-size: 1em;
   line-height: 1.6em;
   margin-bottom: 2em;
   list-style-position: inside;
+}
+.content .page-content ol:first-of-type {
+  font-size: 0.8em;
 }
 .content .page-content ol.disc {
   list-style-type: disc;
@@ -74,6 +80,7 @@
 }
 .content .page-content ol ol {
   padding-left: 0;
+  font-size: 0.8em;
 }
 .content .page-content ol ol li {
   margin-bottom: 1em;
