--- a/css/page.styl
+++ b/css/page.styl
@@ -7,9 +7,13 @@
   font-size 1.3em
   font-weight 700
   display inline-block
-  margin-top 110px
+  margin-top 128px
   text-transform uppercase
   line-height 2em
+
+  p {
+    font-size 2em
+  }
 
   li {
     margin-bottom 1em
@@ -41,10 +45,14 @@
 
   .page-content {
     ol {
-      font-size .9em
+      font-size 1em
       line-height 1.6em
       margin-bottom 2em
       list-style-position inside
+
+      &:first-of-type {
+        font-size 0.8em
+      }
 
       &.disc {
         list-style-type disc
@@ -72,6 +80,7 @@
 
       ol {
         padding-left 0
+        font-size .8em
         li {
           margin-bottom 1em
           list-style-type decimal
