--- a/css/forms.css
+++ b/css/forms.css
@@ -17,8 +17,7 @@
   -ms-transition: margin-top 0.2s ease-in-out;
   transition: margin-top 0.2s ease-in-out;
 }
-#overlay form#contact-form,
-#overlay form#submit-form {
+#overlay form {
   display: none;
   width: 650px;
   margin: auto;
@@ -34,8 +33,7 @@
   -ms-transition: margin-top 0.2s ease-in-out;
   transition: margin-top 0.2s ease-in-out;
 }
-#overlay form#contact-form *,
-#overlay form#submit-form * {
+#overlay form * {
   width: 100%;
   resize: none;
   color: #11242f;
@@ -44,71 +42,56 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
-#overlay form#contact-form .contactLogotype,
-#overlay form#submit-form .contactLogotype {
+#overlay form .contactLogotype {
   font-family: 'Raleway', helvetica;
   padding: 0 20px 20px 20px;
   text-align: center;
 }
-#overlay form#contact-form .contactLogotype,
-#overlay form#submit-form .contactLogotype,
-#overlay form#contact-form input,
-#overlay form#submit-form input,
-#overlay form#contact-form textarea,
-#overlay form#submit-form textarea {
+#overlay form .contactLogotype,
+#overlay form input,
+#overlay form textarea {
   -webkit-border-radius: 0;
   border-radius: 0;
   font-size: 1em;
   border: none;
   margin: 0;
 }
-#overlay form#contact-form input,
-#overlay form#submit-form input,
-#overlay form#contact-form textarea,
-#overlay form#submit-form textarea,
-#overlay form#contact-form p,
-#overlay form#submit-form p {
+#overlay form input,
+#overlay form textarea,
+#overlay form p {
   padding: 20px 20px 20px 20px;
 }
-#overlay form#contact-form input[type="text"],
-#overlay form#submit-form input[type="text"] {
+#overlay form input[type="text"] {
   border-bottom: 1px solid #eaeaea;
 }
-#overlay form#contact-form input[type="text"]:after,
-#overlay form#submit-form input[type="text"]:after {
+#overlay form input[type="text"]:after {
   content: "X";
 }
-#overlay form#contact-form textarea,
-#overlay form#submit-form textarea {
+#overlay form textarea {
   min-height: 250px;
 }
-#overlay form#contact-form #submit,
-#overlay form#submit-form #submit {
+#overlay form #submit {
   font-size: 1.5em;
   background: #fff;
   border-top: 1px solid #eaeaea;
   font-weight: 100;
 }
-#overlay form#contact-form input:hover,
-#overlay form#submit-form input:hover,
-#overlay form#contact-form textarea:hover,
-#overlay form#submit-form textarea:hover,
-#overlay form#contact-form *:focus,
-#overlay form#submit-form *:focus {
+#overlay form input:hover,
+#overlay form textarea:hover,
+#overlay form *:focus {
   background: #f5f5f5;
   outline: none;
 }
-#overlay form#contact-form p,
-#overlay form#submit-form p {
+#overlay form p {
   font-size: 1em;
   margin: 0;
   padding: 20px 20px 3px 5px;
   color: #a9a9a9;
   border-bottom: 1px dashed #eaeaea;
 }
-#overlay form#submit-form textarea {
+#overlay form textarea {
   border-bottom: 1px solid #eaeaea;
 }
-#overlay form#submit-form textarea:last-of-type {
+#overlay form textarea:last-of-type {
   border-bottom: none;
 }
