--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .logo {
   width: 100%;
   height: 250px;
-  margin-bottom: 20px;
+  margin: 50px auto;
 }
 .logotype {
   float: left;
@@ -42,7 +42,7 @@ p.mobile-text {
   font-weight: 800;
   padding: 20px 0;
   width: 32%;
-  margin: 0 0 20px 0;
+  margin: 0 0 40px 0;
   border: none;
   float: left;
   -webkit-transition: background 0.2s ease-in-out;
@@ -67,7 +67,7 @@ p.mobile-text {
   outline: none;
 }
 #social-media {
-  margin: 20px 0 80px;
+  margin: 0 0 80px;
   width: 100%;
   display: inline-block;
   clear: both;
