--- a/css/languages.css
+++ b/css/languages.css
@@ -1,36 +1,38 @@
-.language-options {
+.language-selection {
+  display: inline-block;
+}
+.language-selection .language-options {
   display: none;
   clear: both;
   float: left;
   display: inline-block;
-  margin-bottom: 20px;
   height: 38px;
   overflow: hidden;
 }
-.language-options li {
+.language-selection .language-options li {
   font-size: 1.5em;
   float: left;
   width: 113px;
 }
-.language-options li .languageButton {
+.language-selection .language-options li .languageButton {
   background: none;
   padding: 5px 10px;
   font-weight: 100;
   height: 38px;
   border-bottom: 2px solid transparent;
 }
-.language-options li .languageButton.beta:after {
+.language-selection .language-options li .languageButton.beta:after {
   content: " BETA";
   color: #db0000;
   font-size: 1em;
 }
-.language-options li .languageButton.active {
+.language-selection .language-options li .languageButton.active {
   background: #11242f;
   color: #fff;
   -webkit-border-radius: 2px;
   border-radius: 2px;
 }
-.language-options li .languageButton:hover {
+.language-selection .language-options li .languageButton:hover {
   border-bottom: 2px solid #11242f;
 }
 .language-modal {
@@ -93,9 +95,20 @@
   clear: both;
   padding: 15px;
   border-top: 1px solid #eee;
+  -webkit-transition: background 0.2s ease-in-out;
+  -moz-transition: background 0.2s ease-in-out;
+  -o-transition: background 0.2s ease-in-out;
+  -ms-transition: background 0.2s ease-in-out;
+  transition: background 0.2s ease-in-out;
 }
 .language-modal .modal-wrapper .content-wrapper a:hover {
-  background: #eee;
+  background: #eff5f9;
+  border-top: 1px solid #deebf3;
+  -webkit-transition: background 0.2s ease-in-out;
+  -moz-transition: background 0.2s ease-in-out;
+  -o-transition: background 0.2s ease-in-out;
+  -ms-transition: background 0.2s ease-in-out;
+  transition: background 0.2s ease-in-out;
   text-shadow: none;
 }
 .language-modal .background {
