--- a/css/languages.styl
+++ b/css/languages.styl
@@ -1,41 +1,44 @@
 @import 'nib'
 @import 'common-variables'
 
-.language-options {
-    display none
-    clear both
-    float left
+.language-selection {
     display inline-block
-    margin-bottom 20px
-    height 38px
-    overflow hidden
 
-    li {
-        font-size 1.5em
+    .language-options {
+        display none
+        clear both
         float left
-        width 113px
+        display inline-block
+        height 38px
+        overflow hidden
 
-        .languageButton {
-            background none
-            padding 5px 10px
-            font-weight  100
-            height 38px
-            border-bottom 2px solid transparent
+        li {
+            font-size 1.5em
+            float left
+            width 113px
 
-            &.beta:after {
-                content " BETA"
-                color #DB0000
-                font-size 1em
-            }
+            .languageButton {
+                background none
+                padding 5px 10px
+                font-weight  100
+                height 38px
+                border-bottom 2px solid transparent
 
-            &.active {
-                background $wikitonguesBlue
-                color #fff
-                border-radius $radius
-            }
+                &.beta:after {
+                    content " BETA"
+                    color #DB0000
+                    font-size 1em
+                }
 
-            &:hover {
-                border-bottom 2px solid $wikitonguesBlue
+                &.active {
+                    background $wikitonguesBlue
+                    color #fff
+                    border-radius $radius
+                }
+
+                &:hover {
+                    border-bottom 2px solid $wikitonguesBlue
+                }
             }
         }
     }
@@ -97,9 +100,12 @@
                 clear both
                 padding 15px
                 border-top 1px solid #eee
+                transition background $transitionTime ease-in-out
 
                 &:hover {
-                    background #eee
+                    background lighten($wikitonguesBlue,95%)
+                    border-top 1px solid lighten($wikitonguesBlue,90%)
+                    transition background $transitionTime ease-in-out
                     text-shadow none
                 }
             }
