--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@
   width: 100%;
   height: 250px;
   margin-bottom: 20px;
+  padding: 25px 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .logotype {
   float: left;
