--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .logo {
   width: 100%;
   height: 250px;
-  margin-bottom: 20px;
+  margin: 50px auto;
   padding: 25px 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
