--- a/css/index.styl
+++ b/css/index.styl
@@ -4,7 +4,7 @@
 .logo {
     width 100%
     height 250px
-    margin-bottom 20px
+    margin 50px auto
     padding 25px 0
     box-sizing border-box
 }
